	* add Path type which can be used for non-auto OBJECT_PATH handling, spotted by Mathis
	* fix some freebsd build issues:
		* remove explicit recursive make calls
		* parameterize /usr/lib as DBUSLIBDIR
	  Spotted by Roberto Francisco Arroyo Moreno <robfram -at- ugr -dot- es>
	* rejig build system to replace variables in wrapper in make stage and
	  use DESTDIR properly, hence removing the RUPREFIX stuff.

Version 1.12:

	* fix internal-cross-test bugs and increase error verbosity
	* add org.freedesktop.DBus.Error.NoReply, change to that from my own
	* add -pedantic -std=c99 flags to GCC
	* remove supplied Hal classes as they are out of date
	* change to using tex4ht rather than latex2html

Version 1.11:

	* fix script replacement directories to be different to install directories
	* split install-doc and install-man to allow easy split -doc package

Version 1.10:

	* fix URLs to point to fdo 
	* check for signal path validity in Java
	* fix NameAcquired spelling
	* check array lengths and name lengths
	* support method calls with empty interfaces
	* support for non-activating remote objects
	* remove errant debug statemant left in 1.9
	* Fix List<List<Integer>> bug spotted by Remi Emonet
	  <remi.emonet -at- inrialpes -dot- fr>
	* Fix OBJECT_PATH handling; bug spotted by Remi Emonet
	  <remi.emonet -at- inrialpes -dot- fr>
	* added getRemoteObject and getPeerRemoteObject methods with
	  introspection support to guess interfaces.
	* changed introspection to recurse over the exported object tree
	  and show sub-objects.
	* compare maps unordered in tests; spotted by Simon McVittie 
	  <simon -dot- mcvittie -at- collabora -dot- co -dot- uk>
	* implement UInt64 with BigInteger to allow full-range UInt64s
	* fix $ in introspection data for nested interfaces
	* fix the required dbus version in the docs
	* can now send DBUS_TYPE_SIGNATURE as Type[]
	* rewrite Variant handling to work with complex types
	* add $JAVA_HOME/include and $JAVA_HOME/include/linux to CFLAGS