@@ -24,9 +24,9 @@ class DBusMatchRule
       this.iface = iface;
       this.member = member;
    }
-   public DBusMatchRule(DBusExecutionException e)
+   public DBusMatchRule(DBusExecutionException e) throws DBusException
    {
-      iface = DBusConnection.dollar_pattern.matcher(e.getClass().getName()).replaceAll(".");
+      this(e.getClass());
       member = null;
       type = "error";
    }
@@ -45,9 +45,9 @@ class DBusMatchRule
       else if (m instanceof MethodReply)
          type = "method_reply";
    }
-   public DBusMatchRule(Class<? extends DBusInterface> c, String method)
+   public DBusMatchRule(Class<? extends DBusInterface> c, String method) throws DBusException
    {
-      iface = DBusConnection.dollar_pattern.matcher(c.getName()).replaceAll(".");
+      this(c);
       member = method;
       type = "method_call";
    }
@@ -61,21 +61,30 @@ class DBusMatchRule
    {
       if (DBusInterface.class.isAssignableFrom(c)) {
          iface = DBusConnection.dollar_pattern.matcher(c.getName()).replaceAll(".");
+         if (!iface.matches(".*\\..*"))
+            throw new DBusException("DBusInterfaces must be defined in a package.");
          member = null;
          type = null;
       }
       else if (DBusSignal.class.isAssignableFrom(c)) {
          iface = DBusConnection.dollar_pattern.matcher(c.getEnclosingClass().getName()).replaceAll(".");
+         // Don't export things which are invalid D-Bus interfaces
+         if (!iface.matches(".*\\..*"))
+            throw new DBusException("DBusInterfaces must be defined in a package.");
          member = c.getSimpleName();
          type = "signal";
       }
       else if (DBusErrorMessage.class.isAssignableFrom(c)) {
          iface = DBusConnection.dollar_pattern.matcher(c.getName()).replaceAll(".");
+         if (!iface.matches(".*\\..*"))
+            throw new DBusException("DBusInterfaces must be defined in a package.");
          member = null;
          type = "error";
       }
       else if (DBusExecutionException.class.isAssignableFrom(c)) {
          iface = DBusConnection.dollar_pattern.matcher(c.getClass().getName()).replaceAll(".");
+         if (!iface.matches(".*\\..*"))
+            throw new DBusException("DBusInterfaces must be defined in a package.");
          member = null;
          type = "error";
       }
